rova: parts: Fix deprecations
Signed-off-by: iusmac <iusico.maxim@libero.it>